<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/action_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_filled_24" />

        <item
            android:id="@+id/action_add"
            android:title="@string/add"
            android:enabled="true"/>

        <item
            android:id="@+id/maps"
            android:title="@string/peta"
            android:icon="@drawable/ic_maps"
            app:showAsAction="always"/>
        <item
            android:id="@+id/logoutmenu"
            android:title="@string/logout"
            app:showAsAction="ifRoom"
            android:icon="@drawable/baseline_logout_24" />


    </group>

</menu>