<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="24dp">

    <ImageView
        android:id="@+id/ImageViewResult"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        app:strokeColor="@color/blue_primary"
        app:cornerRadius="12dp"
        android:textColor="@color/black"
        android:layout_marginEnd="8dp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:text="@string/kamera"
        app:icon="@drawable/baseline_camera_alt_24"
        app:layout_constraintEnd_toStartOf="@+id/btnGallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageViewResult" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:text="@string/galeri"
        app:cornerRadius="12dp"
        app:icon="@drawable/baseline_image_24"
        android:textColor="@color/black"
        app:strokeColor="@color/blue_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCamera"
        app:layout_constraintTop_toTopOf="@+id/btnCamera"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:gravity="start"
        android:hint="@string/inputdescription"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:background="@drawable/edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCamera" />

    <Button
        android:id="@+id/sendStory"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        app:cornerRadius="12dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>