<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icon_register"
            android:contentDescription="@string/sample_regist" />

        <EditText
            android:id="@+id/edtUser"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/username"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.example.a01_storyapp.kumpulan_view.landing.EditTextEmail
            android:id="@+id/edt_email"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/edtUser"
            app:layout_constraintStart_toStartOf="@+id/edtUser"
            app:layout_constraintTop_toBottomOf="@+id/edtUser" />

        <com.example.a01_storyapp.kumpulan_view.landing.EditTextKataSandi
            android:id="@+id/edt_password"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <Button
            android:id="@+id/btn_signup"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/green_light"
            android:text="@string/sign_up"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/tv_login"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question_login"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <Button
            android:id="@+id/btn_signin"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/log_in"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtUser"
            app:layout_constraintVertical_bias="0.511"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>